# obsidian-mem

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  cli.py  config.example.yaml  importer.py  mengram.py  mengram_middleware.py  obsidian_mem.py  obsidian_mem_middleware.py  pyproject.toml  railway.json  requirements.txt
api/: __init__.py  cloud_mcp_server.py  mcp_server.py  rest_server.py
blog/: 01-why-3-types-of-memory.md  02-experience-driven-procedures.md  03-mem0-vs-letta-vs-zep-vs-mengram.md
cloud/: api.py  client.py  dashboard.html  docker-compose.yml  embedder.py  evolution.py  landing.html  schema.sql  store.py
engine/: __init__.py  brain.py
engine/extractor/: conversation_extractor.py  llm_client.py
engine/graph/: knowledge_graph.py
engine/parser/: markdown_parser.py
engine/retrieval/: hybrid_search.py
engine/vault_manager/: vault_manager.py
engine/vector/: embedder.py  vector_store.py
examples/customer-support-agent/: main.py
examples/devops-agent/: main.py
examples/personal-assistant/: main.py
integrations/: __init__.py  crewai.py  langchain.py
integrations/openclaw/: README.md  SKILL.md
integrations/openclaw/scripts/: mengram-add.sh  mengram-profile.sh  mengram-search.sh  mengram-setup.sh  mengram-workflow.sh
sdk/js/: README.md  index.d.ts  index.js  package.json
tests/: test_importer.py  test_parser.py
